feat: add sellers page