@@ -1,18 +1,26 @@
 package com.realtor.app.seller.service;
 
+import com.realtor.app.real_estate.model.RealEstate;
+import com.realtor.app.real_estate.repository.RealEstateRepo;
 import com.realtor.app.seller.model.Seller;
-import com.realtor.app.seller.model.SellerSalesDTO;
+import com.realtor.app.seller.model.SellerWithAssociatedProperties;
 import com.realtor.app.seller.repository.SellerRepo;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
+import java.util.Set;
+import java.util.stream.Collectors;
 
 @Service
 public class SellerServiceImpl implements SellerService {
     @Autowired
     private SellerRepo sellerRepo;
+
+    @Autowired
+    private RealEstateRepo realEstateRepo;
 
     @Override
     public List<Seller> getAll() {
@@ -20,12 +28,27 @@ public class SellerServiceImpl implements SellerService {
         return results;
     }
 
-    private SellerSalesDTO mapToSellerSalesDTO(Object[] result) {
-        Long sellerId = ((Number) result[0]).longValue();
-        String firstName = (String) result[1];
-        String lastName = (String) result [2];
-        String phoneNumber = (String) result [3];
-        List<String> saleIds = Arrays.stream((result[4].toString().split(","))).toList();
-        return new SellerSalesDTO(sellerId, firstName, lastName, phoneNumber, saleIds);
+    @Override
+    public List<SellerWithAssociatedProperties> getAllWithProperties() {
+        List<Seller> sellers = sellerRepo.findAll();
+        List<SellerWithAssociatedProperties> extendedSellers= sellers.stream()
+                .map(SellerServiceImpl::convertToExtendedSeller)
+                .collect(Collectors.toList());
+        extendedSellers.forEach(seller -> {
+            List<RealEstate> realEstates = realEstateRepo.findBySellerId(seller.getId());
+            seller.setRealEstates(realEstates);
+        });
+        return extendedSellers;
     }
+
+    public static SellerWithAssociatedProperties convertToExtendedSeller(Seller seller) {
+        SellerWithAssociatedProperties extendedSeller = new SellerWithAssociatedProperties();
+        extendedSeller.setId(seller.getId());
+        extendedSeller.setFirstName(seller.getFirstName());
+        extendedSeller.setLastName(seller.getLastName());
+        extendedSeller.setPhoneNumber(seller.getPhoneNumber());
+
+        return extendedSeller;
+    }
+
 }
